Resolves: fdo#87248 assume 0 chse means use encoding that matches lid

Change-Id: I813cc6bdc92b03bdfdd5202a85e958020a9c52c8